--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -102,7 +102,7 @@
     set -g status-utf8 on                  # set utf-8 for the status bar
     set -g status-interval 5               # set update frequencey (default 15 seconds)
     set -g status-justify centre           # center window list for clarity
-    set-option -g status-position top      # position the status bar at top of screen
+    #set-option -g status-position bottom      # position the status bar at top of screen
 
     # visual notification of activity in other windows
     setw -g monitor-activity on
@@ -131,3 +131,5 @@
     set -g status-right-length 60
     set -g status-right "#[fg=yellow]%D #[fg=green]:: %T %Z :: #(date -u | awk '{print $4}') UTC::"
 
+    #Open a man page in new window
+    bind-key / command-prompt "split-window -h 'exec man %%'"
